# embedded-mysql

./: CMakeLists.txt  README.md  build.sh  my.cnf  test2_libmysqld.cpp
